src/main/java/com/example/weather_application/errors/NonExistentLocationNameException.java
package com.example.weather_application.errors;

public class NonExistentLocationNameException extends RuntimeException {
    public NonExistentLocationNameException(String message) {
        super(message);
    }
}
